# advent-of-code-rs

./: .env.example  .gitignore  Cargo.toml  Taskfile.yml  readme.md
.github/workflows/: rust.yml
src/: chain_pattern_finder.rs  day.rs  day_number.rs  direction.rs  file_system.rs  grid.rs  infinite_iterator.rs  main.rs  math.rs  pair_generator.rs  point.rs  range.rs  shoelace_formula.rs  utils.rs  year.rs
src/aoc/: day_number.rs  expected_result.rs  file_system.rs  mod.rs  puzzle_day.rs  puzzle_part.rs  year.rs
src/commands/: input.rs  mod.rs  output.rs  solve.rs
src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day_template.rs  mod.rs
src/solutions/year2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/solutions/year2016/: day01.rs  day02.rs  (+12 more)
src/utils/: binary.rs  chain_pattern_finder.rs  day_number.rs  deltoid_surface.rs  direction.rs  file_system.rs  filled_region.rs  grid.rs  grid_line.rs  light_grid.rs  line.rs  math.rs  mod.rs  moving_point.rs  orientation.rs  pair_generator.rs  point.rs  point3d.rs  polygon.rs  puzzle_part.rs  range.rs  region.rs  rotation.rs  shoelace_formula.rs  surface_range.rs  traits.rs  vector.rs  year.rs
(+77 files in other folders)
