[package]
name = "advent-of-code-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-client = "0.2.0"
clap = { version = "4.5.21", features = ["derive"] }
dotenv = "0.15.0"
md5 = "0.8.0"
regex = "1.11.1"
itertools = "0.14.0"
serde_json = "1.0.145"